# threat-model-tool

./: .gitignore  EXTRACTION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  TreeNode_README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  setup-dev.sh  setup.py  threat-model-schema.json  tsconfig.json
.claude/: settings.local.json
.claude/commands/: har-party-classifier.md  jira-ticket-ops-agent.md  pentest-agent.md  pentest-tm-bridge.md  threat-modeling-agent.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: har-party-classifier.agent.md  jira-ticket-ops-agent.agent.md  pentest-agent.agent.md  pentest-tm-bridge.agent.md  threat-modeling-agent.agent.md
.github/workflows/: generate-package.yml  publish-mkdocs.yml
astro-site/: astro.config.mjs  package-lock.json  package.json
docs/: ASTRO_SITE_STATUS.md  HAR_2_TM_tool.md  HAR_2_TM_tool_config_workflow.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.old.md  index.rst
docs/ai/: copilot-instructions.md  threat-modeling-guide.md
docs/plans/: ASTRO_SITE_PLAN.md  CHECKLIST.md  HUGO_SITE_PLAN.md  PORTING_CONTINUATION_PLAN.md  PROPER_PORT_PLAN.md  REAL_WORLD_TEST_PLAN.md
docs/testing/: DynamicTestingGuide.md
docs/vscode_config_example/: VSCODE_CONFIG.md
docusaurus-site/: docusaurus.config.cjs  package-lock.json
exampleThreatModel/: AuthorizationEndpoint.yaml  OAuth2.0.yaml
hugo-site/: package-lock.json
jira_utils/: README.md
old-python/: .gitignore  Makefile  package-lock.json  serve_build.sh  setup-dev.sh
old-python/tree-node/: README.md  pyproject.toml
old-python/tree-node/src/tree_node/: __init__.py
old-python/tree-node/src/tree_node.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
old-python/tree-node/tests/: test_tree_node.py
scripts/: compare_totest.py
src/: ReportGenerator.ts  index.ts  parser.ts
src/jira/: index.ts  (+8 more)
tests/: CVSS.test.ts  CliOptions.test.ts  CountermeasureInPlace.test.ts  Har2Seq.test.ts  Har2SeqCli.test.ts  InitHarConfig.test.ts  InitThreatModel.test.ts  MarkdownRendererSummary.test.ts  ModelPropertyAssignment.test.ts  PDFRendererArgs.test.ts  ThreatModel.test.ts  ThreatModelJsonFormat.test.ts  Visibility.test.ts  context.py  example_tree_usage.py  test_advanced.py  test_basic.py  test_full_feature.py  test_tree_extraction.py  tmDataTest.py
threat-model-tool-js/: .gitignore  ASTRO_SITE_PLAN.md  ASTRO_SITE_STATUS.md  HUGO_SITE_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PORTING_CONTINUATION_PLAN.md  PROPER_PORT_PLAN.md  README.md  REAL_WORLD_TEST_PLAN.md  demo.js  package-lock.json  package.json  threat-model-schema.json  tsconfig.json
tree-node/: README.md
(+245 files in other folders)
