[project]
name = "r3threatmodeling"
license = {text = "Apache-2.0"}
description = "r3threatmodeling tool for structuring and reporting"
dynamic=["version", "dependencies"]
readme="README.md"
authors = [ {name="David Cervigni", email="david.cervigni@r3.com"}, { name="James Brown" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "r3threatmodeling.__version__"}
dependencies = {file = ["src/r3threatmodeling/requirements.txt"]}

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"r3threatmodeling" = ["**/*.mako"]
"r3threatmodeling.assets" = ["**"]
"r3threatmodeling.scripts" = ["**"]

[tool.setuptools.exclude-package-data]
"r3threatmodeling" = ["tests*"]

[project.urls]
"Homepage" = "https://github.com/corda/threat-model-tool/"
"Bug Tracker" = "https://github.com/corda/threat-model-tool/issues"